[package]
name = "rubrail"
version = "0.4.0"
authors = ["Trevor Bentley <mrmekon@gmail.com>"]
description = "Rubrail is a Rust library for interfacing with the Mac Touch Bar"
keywords = ["macos", "touchbar", "osx", "mac"]
categories = ["gui", "hardware-support"]
homepage = "https://github.com/mrmekon/rubrail-rs"
repository = "https://github.com/mrmekon/rubrail-rs"
documentation = "https://mrmekon.github.io/rubrail-rs/rubrail/"
license = "Apache-2.0"
build = "build.rs"

[lib]
name = "rubrail"
crate-type = ["rlib", "dylib"]

[features]
default = ["private_api"]
private_api = []
objc_wrapper = []

[dependencies]
log = "0.3.7"
log4rs = "0.6.3"

[target."cfg(target_os = \"macos\")".dependencies]
libc = "0.2"
cocoa = "0.9.2"
objc-foundation = "0.1.1"
objc_id = "0.1"

[target."cfg(target_os = \"macos\")".dependencies.objc]
version = "0.2.2"
features = ["exception"]

[package.metadata.release]
sign-commit = false
upload-doc = true
pre-release-commit-message = "Release {{version}}"
dev-version-ext = "rc"
tag-message = "Release {{version}}"
doc-commit-message = "Release {{version}}"
